[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", branch = "master", features = ["ttf"]}

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
dbus = "0.9.7"
